[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tigerwallet"
version = "3.1"
authors = [
  { name="Serpenseth", email="serpenseth@tuta.io" },
]
description = "Non-custodial crypto wallet"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "segno>=1.6.1",
    "web3>=7.8.0",
    "eth-account>=0.13.5",
    "uniswap-universal-router-decoder>=1.2.1",
    "pyqt6>=6.8.1",
    "orjson>=3.10.12",
    "mnemonic>=0.21",
    "requests>=2.32.3",
    "hexbytes>=1.2.1",
    "numpy>=1.26.4"
]

[project.gui-scripts]
tigerwallet = "TigerWallet:tigerwallet"
